--- a/overlay-lineage/packages/apps/Settings/res/values/config.xml
+++ b/overlay-lineage/packages/apps/Settings/res/values/config.xml
@@ -18,6 +18,18 @@
     <!-- Whether to show Smooth Display feature in Settings Options -->
     <bool name="config_show_smooth_display">true</bool>
 
+
     <!-- Show Now Playing -->
     <bool name="config_show_now_playing">true</bool>
+
+    <!-- SettingsGoogle -->
+    <bool name="config_adaptive_alert_vibration_enabled">true</bool>
+    <bool name="config_battery_first_use_date_enabled">true</bool>
+    <bool name="config_connectivity_helper_call_quality_default_value">true</bool>
+    <bool name="config_connectivity_helper_d2d_default_value">true</bool>
+    <bool name="config_show_connectivity_helper_call_quality">true</bool>
+    <bool name="config_show_connectivity_helper_d2d">true</bool>
+    <bool name="config_show_reverse_charging">true</bool>
+    <bool name="config_show_touch_sensitivity">true</bool>
+    <bool name="config_clear_calling_enabled">true</bool>
 </resources>
